--- a/management/templates/management/signup.html
+++ b/management/templates/management/signup.html
@@ -1,65 +1,41 @@
 {% extends "management/base.html" %}
 
-{% block title %} Login Form {% endblock %}
+{% block title %} signup {% endblock %}
 {%load crispy_forms_tags %}
 {% load static%}
 {% block content %}
 
 	<div class="container" style="">
-		
-				<div class="" style="margin: 10px;">
-					<div class="card bg-dark">
-						<div class="card-body" style="color: white;">
-							<div class="row">
-								<div class="col-md-6 text-center">
-									<br>
-									<h5>you new user ? first for create an account . </h5><hr>
-									<ul>
-									<li><h5>Enter a valid email address.</h5></li>
-									<li><h5>Enter a valid user name and password !</h5></li>
-									<li><h5>after create account you use username and password for login.</h5></li>
-									</ul><br>
-									<img src="{% static 'images/signup.jpg' %}" width="500px;" height="280px;">
-									
-								</div>
-
-								<div class="col-md-6">
-									<br>
-									<form action="" method="post" class="" style="width: 400px;">
-								<h5 style="text-align: center">Signup</h5><hr>
+		<div class="" style="margin: 10px;">
+			<div class="card bg-dark">
+				<div class="card-body" style="color: white;">
+					<div class="row">
+						<div class="col-md-6 text-center">
+							<br>
+							<h5>you new user ? first for create an account . </h5><hr>
+							<ul>
+								<li><h5>Enter a valid email address.</h5></li>
+								<li><h5>Enter a valid user name and password !</h5></li>
+								<li><h5>after create account you use username and password for login.</h5></li>
+							</ul><br>
+							<img src="{% static 'images/signup.jpg' %}" width="500px;" height="280px;" style="opacity: 0.5">		
+						</div>
+						<div class="col-md-6">
+							<br>
+							<form action="" method="post" class="" style="width: 400px;">
+								<h5 style="text-align: center;font-family:  cursive;"><i class="fas fa-user"></i> Sign Up</h5><hr>
 								{% csrf_token %}
-								{% for field in form %}
-								<div class="field">
-									<label for="{{field.id_for_label}}" class="label">
-									{{field.html_name}}:</label>
-									{{field}}
-									{% for error in field.errors %}
-										<p style="color: red">{{error}}</p>
-									{% endfor %}
-								</div>
-								{% endfor %}
+								{{form.as_p}}
 								<br>
-
 								<div class="form-group text-center">
 									<input type="submit" name="Signup" class="btn btn-primary text-center" value="Signup" >
 								</div>
-							</form>
-					
-									
-								</div>
-							
-						</div>
+							</form>	
+						</div>		
 					</div>
 				</div>
-				
-			</div>
-			
-			
-	
-		
-		
-	
-		
+			</div>		
+		</div>
 	</div>
 
 {% endblock %}
