--- a/management/templates/management/update_course_registration.html
+++ b/management/templates/management/update_course_registration.html
@@ -18,11 +18,11 @@
 			</div>
 			
 		<div class="col-md-8">
-			<div class="card bg-info">
+			<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
 						<div class="row">
 							<div class="col-md-6">
-								<form action="" method="post" class="" style="width: 400px;">
+								<form action="" method="post" class="" style="width: 400px;font-weight: bold">
 									<h5 style="text-align: center">Update Course Registration</h5><hr>
 									{% csrf_token %}
 									<div class="main">
