--- a/management/templates/management/attendance_view.html
+++ b/management/templates/management/attendance_view.html
@@ -12,7 +12,7 @@
 			</div>
 			
 			<div class="col-md-8">
-				<div class="card bg-info">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
 						<div class="row">
 							<div class="col-md-4 text-center" >
@@ -21,48 +21,55 @@
 								<div class="small-box" style="color: black; border: 2px solid black; background: white; border-radius: 30px;">
 									<h5>Total Persent : {{persent}}</h5><hr>
 									<h5>Total Absent : {{absent}}</h5>
-									
-								</div>
-								
-								
+								</div>	
 							</div>
 							<div class="col-md-8">
 								<h5>More Information:</h5><hr>
-			
-								<table class="table">
-			
+								{% if page_obj %}
+								<table class="table" style="color: white;font-weight: bold">
 									<thead>
 										<tr>
 											<th scope="col">#</th>
 											<th scope="col">Date</th>
 											<th scope="col">Subject</th>
 											<th scope="col">Status</th>
-					
 										</tr>
 									</thead> 
 									<tbody>
-										{% for attendance in attendance %}
+										{% for attendance in page_obj %}
 										<tr>
 											<th scope="row">{{attendance.id}}</th>
 											<td>{{attendance.date}}</td>
 											<td>{{attendance.subject}}</td>
 											<td>{{attendance.status}}</td>
 										</tr>
-											{% endfor %}
+										{% endfor %}
 									</tbody>
 								</table>
-								
-								
+								<div class="pagination">
+    							<span class="step-links" style="font-weight: bold;">
+       							{% if page_obj.has_previous %}
+            						<a href="?page=1">&laquo; first </a>
+            						<a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+        						{% endif %}
+
+        						<span class="current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+
+        						{% if page_obj.has_next %}
+            					<a href="?page={{ page_obj.next_page_number }}"> next </a>
+            					<a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+        						{% endif %}
+    							</span>
+								</div>
+								{% else %}
+								<h5>No more information!</h5>
+								{% endif %}
 							</div>
-							
 						</div>
 					</div>	
 				</div>	
 			</div>
 		</div>
-		
-			
-	
 	</div>		
 		
 
