--- a/management/templates/management/change_password.html
+++ b/management/templates/management/change_password.html
@@ -8,46 +8,23 @@
 		<div class="" style="margin: 10px;">
 			<div class="card bg-dark col-md-6">
 				<div class="card-body" style="color: white;">
-					
-
-						<div class="col-md-6">
-							<br>
-							<form action="" method="post" class="" style="width: 400px;">
-								<h5 style="text-align: center">Change Password</h5><hr>
-								{% csrf_token %}
-								{% for field in form %}
-								<div class="field">
-									<label for="{{field.id_for_label}}" class="label">
-									{{field.html_name}}:</label>
-									{{field}}
-									{% for error in field.errors %}
-										<p style="color: red">{{error}}</p>
-									{% endfor %}
-								</div>
-								{% endfor %}
-								<br>
-
+					<div class="col-md-6">
+						<br>
+						<form action="" method="post" class="" style="width: 400px;">
+							<h5 style="text-align: center">Change Password</h5><hr>
+							{% csrf_token %}
 								
-								
-								<div class="form-group text-center">
-									<input type="submit" name="submit" class="btn btn-primary text-center" value="submit" >
-								</div>
+							{{form.as_p}}
+							<br>	
+							<div class="form-group text-center">
+								<input type="submit" name="submit" class="btn btn-primary text-center" value="submit" >
+							</div>
 
-							</form>
-					
-									
-						</div>
+						</form>			
+					</div>
 				</div>
 			</div>
-				
 		</div>
-			
-			
-	
-		
-		
-	
-		
 	</div>
 
 {% endblock %}
