--- a/management/templates/management/course_registration_detail.html
+++ b/management/templates/management/course_registration_detail.html
@@ -11,88 +11,74 @@
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-			
 		<div class="col-md-8">
-
-			<div class="card bg-info">
-					<div class="card-body" style="color: white;">
-						<div class="row g-0">
-							<div class="col-md-6 g-1">
-								<h5 class="text-center">Course Information</h5><hr>
-								<h5>Course: {{course_detail.course}}</h5>
-								<h5>Description: {{course_detail.course.description}}</h5>
-								<h5>Duration : {{course_detail.course.duration}}</h5>
-								<h5>Total Fees: {{course_detail.course.fees}}</h5>
-								<h5>All Subject :</h5>
-								{% for subject in course_detail.subject.all%}
-								<h5>{{subject}}</h5>
-								{% endfor %}
-							</div>
-							
-							<div class="col-md-6 g-1">
-								<h5 class="text-center">Related Subject Teacher </h5><hr>
-								{% if teacher %}
-								<table class="table">
+			<div class="card bg-dark">
+				<div class="card-body" style="color: white;">
+					<div class="row g-0">
+						<div class="col-md-6 g-1">
+							<h5 class="text-center">Course Information</h5><hr>
+							<h5>Course: {{course_detail.course}}</h5>
+							<h5>Description: {{course_detail.course.description}}</h5>
+							<h5>Duration : {{course_detail.course.duration}}</h5>
+							<h5>Total Fees: {{course_detail.course.fees}}</h5>
+							<h5>All Subject :</h5>
+							{% for subject in course_detail.subjects.all%}
+								<ul>
+									<li><h5>{{subject}}</h5></li>
+								</ul>	
+							{% endfor %}
+						</div>
+						<div class="col-md-6 g-1">
+							<h5 class="text-center">Related Subject Teacher </h5><hr>
+							{% if teachers %}
+								<table class="table" style="color: white;font-weight: bold">
 									<thead>
 										<tr>
 											<th scope="col">Subject</th>
 											<th scope="col">Teacher</th>
 										</tr>
-										
 									</thead>
-									{% for subject in course_detail.subject.all %}
-									{% for teacher in teacher %}
-									{% ifequal subject teacher.subject %}
-									<tbody>
-										<tr>
-											<td><b>{{subject}}</b></td>
-											<td><b>{{teacher}}</b></td>
-										</tr>
-									</tbody>
-									{% endifequal %}	
+									{% for teacher in teachers.all %}
+									{% for subject in course_detail.subjects.all %}
+									{% for subject1 in teacher.subjects.all %}
+									{% ifequal subject subject1 %}
+										<tbody>
+											<tr>
+												<td><b>{{subject}}</b></td>
+												<td><b>{{teacher}}</b></td>
+											</tr>
+										</tbody>
+									{% endifequal%}
 									{% endfor %}
 									{% endfor %}
-									
+									{% endfor %}
 								</table>
-								{% else %}
+							{% else %}
 								<h5>No any Information </h5>
-								{% endif %}
-							</div>
+							{% endif %}
 						</div>
-						<div class="text-center">
-							<a href="/management/update-course-registration"><button class="btn btn-warning">Update</button></a>
-			
-							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>
-								
-						</div>
-							
+					</div>
+					<div class="text-center">
+						<a href="/management/update-course-registration"><button class="btn btn-warning">Update</button></a>
+						<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>	
+					</div>		
 					</div>
 					<div class="modal" id="myModal">
 						<div class="modal-dialog">
-					  		<div class="modal-content">
-					  	
-					    		<div class="modal-header">
-					        		<h4 class="modal-title">Are you sure you delete your course registration?</h4>
-					        		<button type="button" class="close" data-dismiss="modal">&times;</button>
-					      		</div>
-					      		<div class="modal-footer">
-        							<a href="/management/delete-course-registration"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
-        							<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      							</div>
-
+					  	<div class="modal-content">
+					    	<div class="modal-header">
+					        <h4 class="modal-title">Are you sure you delete your course registration?</h4>
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					      </div>
+					      <div class="modal-footer">
+        					<a href="/management/delete-course-registration"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
+        					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      					</div>
 							</div>
-   
-  						</div>
+  					</div>
 					</div>
-					
-				
-						
-					
 			</div>
 		</div>
-			
-		
-	
 	</div>		
 	
 
