--- a/management/templates/management/index.html
+++ b/management/templates/management/index.html
@@ -55,11 +55,11 @@
 		</div>
 		
 		<div class="col-md-6">
-			<div class="card bg-info">
+			<div class="card bg-dark">
 				<div class="card-body text-center" style="color: white;">
 					<h5>Courses Information:</h5>
-					<h5><b style="color: black">Total course : {{total}}</b></h5><hr>
-					<table class="table">
+					<h5><b style="color:orange">Total course : {{total}}</b></h5><hr>
+					<table class="table" style="color: white;font-weight: bold">
 						<thead>
 							<tr>
 								<th scope="col">#</th>
@@ -70,10 +70,10 @@
 							</tr>
 						</thead> 
 						<tbody>
-							{% for course in course_list %}
+							{% for course in page_obj %}
 							<tr>
 								<th scope="row">{{course.id}}</th>
-								<td><b>{{course.name}}</b></td>
+								<td>{{course.name}}</td>
 								<td>{{course.description}}</td>
 								<td>{{course.fees}}</td>
 								<td>{{course.duration}}</td>
@@ -82,6 +82,23 @@
 							{% endfor %}
 						</tbody>
 					</table>
+					<div class="pagination">
+    					<span class="step-links" style="font-weight: bold;">
+       						{% if page_obj.has_previous %}
+            					<a href="?page=1">&laquo; first </a>
+            					<a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+        					{% endif %}
+
+        						<span class="current">
+            						Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        						</span>
+
+        					{% if page_obj.has_next %}
+            					<a href="?page={{ page_obj.next_page_number }}"> next </a>
+            					<a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+        					{% endif %}
+    					</span>
+					</div>
 				</div>
 			</div>
 		</div>
