--- a/management/templates/management/leave_information.html
+++ b/management/templates/management/leave_information.html
@@ -11,28 +11,25 @@
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-			
 			<div class="col-md-8">
-
-				<div class="card bg-info">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
 						<div class="row">
-							<div class="col-md-4">
-								<h5 class="text-center">Apply Leave </h5><hr>
-								<form class="row g-2 mt-3" class="main" action="" method="post" enctype="multipart/form-data">
-								{% csrf_token %} 
-								{{form|crispy}}
-								<div class="form-group text-center">
-									<button type="submit" class="btn btn-success ">Send</button>
-								</div>
+							<div class="col-md-4">	
+								<form action="" method="POST">
+									<h5 class="text-center">Apply Leave </h5><hr>
+									
+									{% csrf_token %}
+									{{ form.as_p}}
+									<div class="form-group text-center">
+            	    	<button type="submit" class="btn btn-primary ">Send</button>
+            	   	</div>
 								</form>
-								
 							</div>
 							<div class="col-md-8">
 								<h5 class="text-center">Leave Information</h5><hr>
-								{% if leave_detail %}
-								<table class="table">
-									
+								{% if page_obj %}
+								<table class="table" style="color: white">
 									<thead>
 										<tr>
 											<th scope="col">Leave Date</th>
@@ -42,78 +39,71 @@
 										</tr>
 									</thead> 
 									<tbody>
-									{% for leave in leave_detail %}
+									{% for leave in page_obj %}
 										<tr>
-											
 											<td><b>{{leave.leave_date}}</b></td>
 											<td>{{leave.leave_message}}</td>
 											{% ifequal leave.leave_status 0 %}
-											<td><b style="color: red;">Pending</button></td>
+												<td><b style="color:red;">Pending</button></td>
 											{% else %}
-											
-											<td><b style="color: blue;">Confirm</button></td>
-											
+												<td><b style="color:yellow;">Confirm</button></td>
 											{% endifequal%}
 											<td>
 											<div class="row">
 												<div class="col-md-6">
 													<a href="/management/update-leave/{{leave.id}}"><button class="btn btn-warning">Update</button></a>
-							
 												</div>
-
 												<div class="col-md-6">
-													
 													<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>
-							
 												</div>
 											</div>
 											</td>
 										</tr>
 										<div class="modal" id="myModal">
 											<div class="modal-dialog">
-					  							<div class="modal-content">
-					  	
-					    							<div class="modal-header">
-					        							<h4 class="modal-title" style="color:black;">Are you sure you delete this leave? Date: {{leave.leave_date}}</h4>
-					        							<button type="button" class="close" data-dismiss="modal">&times;</button>
-					      							</div>
-					      							<div class="modal-footer">
-        												<a href="/management/delete-leave/{{leave.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
-        												<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      												</div>
-
+					  						<div class="modal-content">
+					    						<div class="modal-header">
+					        					<h4 class="modal-title" style="color:black;">Are you sure you delete this leave? Date: {{leave.leave_date}}</h4>
+					        					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					      					</div>
+					      					<div class="modal-footer">
+        										<a href="/management/delete-leave/{{leave.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
+        										<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      										</div>
 												</div>
-   
-  											</div>
+  										</div>
 										</div>
 									{% endfor %}
 									</tbody>
 								</table>
+								<div class="pagination">
+    							<span class="step-links" style="font-weight: bold;">
+       							{% if page_obj.has_previous %}
+            					<a href="?page=1">&laquo; first </a>
+            					<a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+        						{% endif %}
+        						<span class="current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+        						{% if page_obj.has_next %}
+            					<a href="?page={{ page_obj.next_page_number }}"> next </a>
+            					<a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+        						{% endif %}
+    							</span>
+								</div>
 								{% else %}
 								<div class="text-center">
 									<h5><b>You have not  any current  leave information!</b></h5><br>
 									<h5>Leave Rules:</h5><hr>
 									<h5>Your attendance is below 75% you can not take leave.</h5>
 									<h5>You can take a one leave in month. </h5>
-									<h5>If you want an emergency leave, you will have to tell the Hod before 2 days.</h5>
-									
+									<h5>If you want an emergency leave, you will have to tell the Hod before 2 days.</h5>		
 								</div>
-								
-								{% endif %}
-								
-							</div>
-
-							
-						</div>
-						
-							
+								{% endif %}	
+							</div>			
+						</div>				
 					</div>
-
-					
 				</div>
 			</div>
 		</div>
-		
 	</div>
 
 {% endblock %}
