--- a/management/templates/management/login.html
+++ b/management/templates/management/login.html
@@ -6,15 +6,14 @@
 
 	<div class="container" style="">
 		<div class="" style="margin: 10px;">
-			<div class="card bg-dark">
+			<div class="card bg-dark col-md-10">
 				<div class="card-body" style="color: white;">
 					<div class="row">
 						<div class="col-md-6 text-center">
 							<br>
-							<h5>you new user ? first for create an account click on create account . </h5><hr>
+							<h5>Don't have an account? Get Started Now!</h5><hr>
 							<img src="{% static 'images/login.jpg' %}" alt="register" width="300" height="180" style="margin-top: -30px;"><br><br>
-							<a href="/management/signup"><button class="btn btn-info" style="border-radius: 25px;">create an account </button></a>
-									
+							<a href="/management/signup"><button class="btn btn-info" style="border-radius: 25px;"><b>Create An Account </b></button></a>
 						</div>
 
 						<div class="col-md-6">
@@ -22,41 +21,17 @@
 							<form action="" method="post" class="" style="width: 400px;">
 								<h5 style="text-align: center">Login</h5><hr>
 								{% csrf_token %}
-								{% for field in form %}
-								<div class="field">
-									<label for="{{field.id_for_label}}" class="label">
-									{{field.html_name}}:</label>
-									{{field}}
-									{% for error in field.errors %}
-										<p style="color: red">{{error}}</p>
-									{% endfor %}
-								</div>
-								{% endfor %}
+								{{form.as_p}}
 								<br>
-
-								
-								
 								<div class="form-group text-center">
-									<input type="submit" name="Login" class="btn btn-primary text-center" value="login" >
+									<input type="submit" name="Login" class="btn btn-primary text-center" value="Login" >
 								</div>
-
-							</form>
-					
-									
+							</form>	
 						</div>
-							
 					</div>
 				</div>
 			</div>
-				
 		</div>
-			
-			
-	
-		
-		
-	
-		
 	</div>
 
 {% endblock %}
