--- a/management/templates/management/sidebar.html
+++ b/management/templates/management/sidebar.html
@@ -2,43 +2,51 @@
 
 <style type="text/css">
 .sidebar a{
-  color: black;
-  background: lightblue;
+  color: white;
+  background: gray;
+  font-weight: bold;
+  font-family: sans-serif;
   
 }
 .sidebar a:hover{
-  color:blue;
-  background: white;
+  color:white;
+  background: black;
 }
-.sidebar a:active{
-  color: yellow;
-  background: blue;
-}
+
 </style>
 
 <div class=" sidebar">
-  <a href="/management/user-profile" class="list-group-item list-group-item-action active">Name: {{request.user.first_name|capfirst}} {{request.user.last_name|capfirst}}</a>
+  <a href="/management/user-profile" class="list-group-item list-group-item-action" style="color:orange;background: blue"><b>Name: {{request.user.first_name|capfirst}} {{request.user.last_name|capfirst}}</b></a>
 
-  {% if request.user.userprofile.role == "STUDENT" %}
+  
     {% if request.user.studentcourseregistration%}
-      <a href="/management/course-registration-detail" class="list-group-item list-group-item-action">Course Details</a>
+      <a href="/management/course-detail" class="list-group-item list-group-item-action">Course Details</a>
       <a href="/management/attendance-view" class="list-group-item list-group-item-action">View Attendance</a>
       <a href="/management/view-result" class="list-group-item list-group-item-action">View Results</a>
       <a href="/management/leave-information" class="list-group-item list-group-item-action">Leave Information</a>
-    {% else %}
-      <a href="/management/course-registration-detail" class="list-group-item list-group-item-action">Course Registration</a>
+      
+    {% else%}
+      {% if request.user.userprofile.role == "student" %}
+        <a href="/management/course-registration" class="list-group-item list-group-item-action">Course Registration</a>
+       
+      {% endif %}
     {% endif %}
-  {% else %}
+  
+  
     {% if request.user.teachersubjectregistration%}
-  		<a href="/management/teacher-subject" class="list-group-item list-group-item-action">Subject Detail</a>
+  		<a href="/management/teacher-subject-detail" class="list-group-item list-group-item-action">Subject Detail</a>
       <a href="/management/take-attendance" class="list-group-item list-group-item-action">Take Attendance </a>
       <a href="/management/attendance-record" class="list-group-item list-group-item-action">Attendance Record </a>
       <a href="/management/leave-information" class="list-group-item list-group-item-action">Leave Information</a>
       <a href="/management/add-result" class="list-group-item list-group-item-action">Add Results</a>
+      
     {% else %}
-      <a href="/management/teacher-subject" class="list-group-item list-group-item-action">Subject Registration</a>
-    {% endif %}		
-  {% endif %}
-    <a href="/management/feedback-information" class="list-group-item list-group-item-action">Feedback Information</a>	
+      {% if request.user.userprofile.role == "teacher" %}
+        <a href="/management/teacher-subject-registration" class="list-group-item list-group-item-action">Subject Registration</a>
+        
+      {% endif %}		
+    {% endif %}
+    <a href="/management/feedback-information" class="list-group-item list-group-item-action">Feedback Information</a>
+    	
 </div>
 <br>
