--- a/management/templates/management/take_attendance.html
+++ b/management/templates/management/take_attendance.html
@@ -11,47 +11,38 @@
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-			
 			<div class="col-md-8">
-				<div class="card bg-info">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
 						<div class="row">
 							<div class="col-md-4 ">
-								<form action="" method="post" class="">
+								<form action="" method="post" class="" style="font-weight: bold">
 									<h5 style="text-align: center">Take Attendance</h5>
 
 									<hr>
 									{% csrf_token %}
-							
 									{{form.as_p}}
-									{% for error in field.errors %}
-										<p style="color: red">{{error}}</p>
-									{% endfor %}
+									<br>
 									<div class="form-group text-center">
 										<input type="submit" name="Submit" class="btn btn-primary text-center" value="Submit" >
 									</div>
 								</form>
 							</div>
 							<div class="col-md-8 text-center">
-								{% if attendance %}
-								<table class="table">
+								{% if page_obj %}
+								<table class="table" style="color: white">
 									<thead>
 										<h5>Attendance Information:</h5>
-										<h5 style="color:black"><b>Course: {{request.user.teachersubjectregistration.course}} , Subject: {{request.user.teachersubjectregistration.subject}}</b></h5><hr>
-										<h5 style="color:black"><b>Date : {{today}}</b></h5>
-										
-
+										<h5 style="color:orange"><b>Course: {{request.user.teachersubjectregistration.course}} , Subject: {{request.user.teachersubjectregistration.subject}}</b> <b style="color: white">Date : {{today}}</b></h5>
 										<tr>
 											<th scope="col">Student</th>
 											<th scope="col">Status</th>
 											<th scope="col">Action</th>
 										</tr>
-										
 									</thead>
 									<tbody>
-										{% for attendance in attendance %}
+										{% for attendance in page_obj %}
 											<tr>
-											
 												<td><b>{{attendance.student}}</b></td>
 												<td><b>{{attendance.status}}</b></td>
 												<td>
@@ -61,33 +52,38 @@
 											</tr>
 										<div class="modal" id="myModal">
 											<div class="modal-dialog">
-					  							<div class="modal-content">
-					  	
-					    							<div class="modal-header">
-					        							<h4 class="modal-title" style="color:black;">Are you sure you delete this attendance? <b>Student: {{attendance.student}}</b></h4>
-					        							<button type="button" class="close" data-dismiss="modal">&times;</button>
-					      							</div>
-					      							<div class="modal-footer">
-        												<a href="/management/delete-attendance/{{attendance.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
-        												<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      												</div>
-
+					  						<div class="modal-content">
+					    						<div class="modal-header">
+					        					<h4 class="modal-title" style="color:black;">Are you sure you delete this attendance? <b>Student: {{attendance.student}}</b></h4>
+					        					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					      					</div>
+					      					<div class="modal-footer">
+        										<a href="/management/delete-attendance/{{attendance.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
+        										<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      										</div>
 												</div>
-   
-  											</div>
+  										</div>
 										</div>
-											{% endfor %}
-										
+										{% endfor %}
 									</tbody>
-
-									
 								</table>
+								<div class="pagination">
+    							<span class="step-links" style="font-weight: bold;">
+       							{% if page_obj.has_previous %}
+            					<a href="?page=1">&laquo; first </a>
+            					<a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+        						{% endif %}
+        						<span class="current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+        						{% if page_obj.has_next %}
+            					<a href="?page={{ 	page_obj.next_page_number }}"> next </a>
+            					<a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+        						{% endif %}
+    							</span>
+								</div>
 								{% else %}
 								<div class="">
 									<img src="{% static 'images/attendance.jpg'%}" style="height: 300px; width: 450px;">
-									
 								</div>
-								
 								{% endif %}
 							</div>
 						</div>
@@ -97,5 +93,7 @@
 			</div>
 		</div>	
 	</div>
+
+
 
 {% endblock %}
