--- a/management/templates/management/update_leave.html
+++ b/management/templates/management/update_leave.html
@@ -10,24 +10,20 @@
 				{% include 'management/sidebar.html'%}
 			</div>
 			<div class="col-md-8">
-				<div class="card bg-info">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white">
-						<form action="" method="POST" enctype="multipart/form-data" class="">
-							<h1 style="text-align: center">Update Leave</h1><hr>
+						<form action="" method="POST" class="" style="font-weight: bold">
+							<h5 style="text-align: center">Update Leave</h5><hr>
 							{% csrf_token %} 
 							{{form|crispy}}
 							<div class="text-center">
 								<input type="submit" name="Update" class="btn btn-warning text-center" value="Update" >
 							</div>
-				
-						
-  						</form>
+  					</form>
 					</div>
 				</div>
 			</div>
 		</div>
-		
-
 	</div>
 
 {% endblock %}
