--- a/management/templates/management/update_result.html
+++ b/management/templates/management/update_result.html
@@ -9,19 +9,24 @@
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
 			</div>
-			<div class="col-md-8">
-				<div class="card bg-info">
+			<div class="col-md-8 ">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white">
-						<form action="" method="POST" enctype="multipart/form-data" class="main" style="width: 500px;">
-							<h4 style="text-align: center">Update Result</h4><hr>
-							{% csrf_token %} 
-							{{form|crispy}}
-							<div class="text-center">
-								<input type="submit" name="Update" class="btn btn-warning text-center" value="Update" >
+						<div class="row">
+							<div class="col-md-4">
+								<form action="" method="POST" enctype="multipart/form-data" class="main" style="width: 500px;">
+									<h4>Update Result</h4><hr>
+									{% csrf_token %} 
+									{{form|crispy}}
+								
+									<input type="submit" name="Update" class="btn btn-warning " value="Update" >
+  							</form>
 							</div>
-				
+							<div class="col-md-8">
+								
+							</div>
+						</div>
 						
-  						</form>
 					</div>
 				</div>
 			</div>
