--- a/management/templates/management/user_feedback.html
+++ b/management/templates/management/user_feedback.html
@@ -1,7 +1,7 @@
 {% extends "management/base.html" %}
 
 
-{% block title %} user apply leave {% endblock %}
+{% block title %} user feedback {% endblock %}
 
 {%load crispy_forms_tags %}
 {% load static %}
@@ -15,43 +15,53 @@
 			
 			<div class="col-md-8">
 
-				<div class="card bg-info">
+				<div class="card bg-dark">
 					<div class="card-body" style="color: white;">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<h5 class="text-center">Send Feedback</h5><hr>
-								<form class="row g-2 mt-3" class="main" action="" method="post" enctype="multipart/form-data">
-								{% csrf_token %} 
-								{{form|crispy}}
-								<div class="form-group text-center">
-									<button type="submit" class="btn btn-success ">Send</button>
-								</div>
+								<form class="row g-2 mt-3 text-center" class="" action="" method="post"  style="font-weight: bold">
+									{% csrf_token %} 
+									{% for field in form %}
+									<div class="field">
+										<label for="{{field.id_for_label}}" class="label">
+										{{field.html_name}} :</label>
+										{{field}}
+										{% for error in field.errors %}
+											<p style="color: red">{{error}}</p>
+										{% endfor %}
+									</div>
+									{% endfor %}
+									<br>
+									<div class="form-group">
+										<input type="submit" name="Submit" class="btn btn-primary btn-center" value="Submit" >
+									</div>
 								</form>
 								
 							</div>
 							<div class="col-md-8">
 								<h5 class="text-center">Feedback Information</h5><hr>
-								{% if feedback_list %}
-								<table class="table">
+								{% if page_obj %}
+								<table class="table" style="color: white;font-weight: bold">
 									
 									<h5>Name : {{request.user.first_name}} {{request.user.last_name}}</h5>
 									<thead>
 										<tr>
-		               						<th scope="col">Date</th>
-		               						<th scope="col">Feedback Messages</th>
-		               						<th>Feedback Reply</th>
-		               						<th>Action</th>
-		               	 				 </tr>
+											<th scope="col">Date</th>
+											<th scope="col">Feedback Messages</th>
+											<th>Feedback Reply</th>
+											<th>Action</th>
+										 </tr>
 										
 									</thead> 
-									{% if feedback_list %}
-		               				
-		               				<tbody>
-		               					{% for feedback in feedback_list %} 
-		               	 				<tr>
-		               	 					<td scope="row">{{feedback.created_at}}</td>
-		               	 					<td>{{feedback.feedback_message}}</td>
-		               	 					<td>{{feedback.feedback_reply}}</td>
+									{% if page_obj %}
+									
+									<tbody>
+										{% for feedback in page_obj %} 
+										<tr>
+											<td scope="row">{{feedback.created_at}}</td>
+											<td>{{feedback.feedback_message}}</td>
+											<td>{{feedback.feedback_reply}}</td>
 											<td>
 											<div class="row">
 												<div class="col-md-6">
@@ -69,26 +79,43 @@
 										</tr>
 										<div class="modal" id="myModal">
 											<div class="modal-dialog">
-					  							<div class="modal-content">
-					  	
-					    							<div class="modal-header">
-					        							<h4 class="modal-title" style="color:black;">Are you sure you delete this feedback?</h4>
-					        							<button type="button" class="close" data-dismiss="modal">&times;</button>
-					      							</div>
-					      							<div class="modal-footer">
-        												<a href="/management/delete-feedback/{{feedback.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
-        												<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      												</div>
+												<div class="modal-content">
+						
+													<div class="modal-header">
+														<h4 class="modal-title" style="color:black;">Are you sure you delete this feedback?</h4>
+														<button type="button" class="close" data-dismiss="modal">&times;</button>
+													</div>
+													<div class="modal-footer">
+														<a href="/management/delete-feedback/{{feedback.id}}"><button type="button" class="btn btn-success" value="True">Confirm</button></a>
+														<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+													</div>
 
 												</div>
    
-  											</div>
+											</div>
 										</div>
 									{% endfor%}
 									</tbody>
 								
-                        			{% endif %}
+									{% endif %}
 								</table>
+								<div class="pagination">
+									<span class="step-links" style="font-weight: bold;">
+									{% if page_obj.has_previous %}
+										<a href="?page=1">&laquo; first </a>
+										<a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+									{% endif %}
+
+									<span class="current">
+									Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+									</span>
+
+									{% if page_obj.has_next %}
+										<a href="?page={{ page_obj.next_page_number }}"> next </a>
+										<a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo;</a>
+									{% endif %}
+									</span>
+								</div>
 								{% else %}
 								<div class="text-center">
 									<h5><b>You did not send any feedback so you have no any feedback information!</b></h5><br>
