--- a/management/templates/management/user_profile_create.html
+++ b/management/templates/management/user_profile_create.html
@@ -5,68 +5,30 @@
 {% block content %}
 
 	<div class="container" style="">
-			<br><br>
+		<div class="row">
+			<div class="col-md-4">
+				{% include 'management/sidebar.html'%}
+			</div>
+
+			<div class="col-md-8">
 				<div class="" style="margin: 10px;">
 					<div class="card bg-dark">
 						<div class="card-body" style="color: white;">
-							<div class="row">
-								<div class="col-md-6">
-									<br>
-									<h5 class ="text-center">you new user ? create your profile clearlly. </h5><hr>
-									<ul style="margin-left: 10px;">
-									<li><h5>Select your role student , teacher and admin</h5></li>
-									<li><h5>Enter a valid phone number </h5></li>
-									<li><h5>Enter a your current address : street , city , state , pincode !</h5></li>
-									</ul>
-									<hr>
-									<h5 class="text-center">After compelete your profile you can accsess this permission:</h5><hr>
-									<h5><b>You Student :</b></h5>
-									<ul>
-										<li><h5>View your user profile can update and delete .</h5></li>
-										<li><h5>You can accsess your attendance record.</h5></li>
-										<li><h5>You can view your subject marks.</h5></li>
-										<li><h5>You can aplly for leave.</h5></li>
-									</ul>
-									<h5><b>You Teacher :</b></h5>
-									<ul>
-										<li><h5>View your user profile can update and delete .</h5></li>
-										<li><h5>You can take student attendance.</h5></li>
-										<li><h5>you add update delete results. </h5></li>
-										<li><h5>You can aplly for leave.</h5></li>
-									</ul>
-									
-								</div>
-
-								<div class="col-md-6">
-									<br>
-									<form action="" method="post" class="" style="width: 400px;" enctype="multipart/form-data">
+							<form action="" method="post" class="main" style="width: 400px;" enctype="multipart/form-data">
 								<h5 style="text-align: center">Create Profile</h5><hr>
 								{% csrf_token %}
-								{% for field in form %}
-								<div class="field">
-									<label for="{{field.id_for_label}}" class="label">
-									{{field.html_name}}:</label>
-									{{field}}
-									{% for error in field.errors %}
-										<p style="color: red">{{error}}</p>
-									{% endfor %}
-								</div>
-								{% endfor %}
+								{{form.as_p}}
 								<br>
-
 								<div class="form-group text-center">
 									<input type="submit" name="Submit" class="btn btn-primary text-center" value="Submit" >
 								</div>
-							</form>
-					
-									
-								</div>
-							
-						</div>
+							</form>		
+						</div>		
 					</div>
 				</div>
-				
 			</div>
+		</div>
+	</div>
 			
 			
 	
