--- a/management/templates/management/user_profile_create.html
+++ b/management/templates/management/user_profile_create.html
@@ -14,7 +14,7 @@
 				<div class="" style="margin: 10px;">
 					<div class="card bg-dark">
 						<div class="card-body" style="color: white;">
-							<form action="" method="post" class="main" style="width: 400px;" enctype="multipart/form-data">
+							<form action="" method="post" class="" style="width: 400px;" enctype="multipart/form-data">
 								<h5 style="text-align: center">Create Profile</h5><hr>
 								{% csrf_token %}
 								{{form.as_p}}
@@ -28,14 +28,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-			
-			
-	
-		
-		
-	
-		
 	</div>
 
 {% endblock %}
