i add the ajax code

--- a/management/templates/management/add_result.html
+++ b/management/templates/management/add_result.html
@@ -17,7 +17,7 @@
 						<div class="row">	
 							<div class="col-md-4 mt-4">
 								<h5>Name : {{request.user.first_name}} {{request.user.last_name}}</h5>
-								<h5>Subject : {{request.user.teachersubjectregistration.subject}}</h5><hr>
+								<h5>Course : {{request.user.teacher.course}}</h5><hr>
 								<form action="" method="POST" enctype="multipart/form-data">
 									<h5 align="center">Add Result</h5>
 									
